Name          : blaze-builder-enumerator
Version       : 0.1
Synopsis      : A combinator for using blaze-builder with enumerator.
Description   : A combinator for using blaze-builder with enumerator.
Author        : Thomas Sutton <me@thomas-sutton.id.au>
Maintainer    : me@thomas-sutton.id.au
Copyright     : Copyright (c) Thomas Sutton 2010
License       : BSD3
Build-type    : Simple
Cabal-version : >=1.6
Category      : Data, Text, Enumerator
Stability     : Experimental
Bug-reports   : mailto:me@thomas-sutton.id.au
Homepage      : http://github.com/thsutton/blaze-builder-enumerator
Tested-with   : GHC==6.12.1

source-repository head
  type: git
  location: http://github.com/thsutton/blaze-builder-enumerator


Library
  ghc-options: -Wall -fno-warn-unused-do-bind

  build-depends:
      base >= 4 && < 5
    , blaze-builder >= 0.2 && < 0.3
    , bytestring >= 0.9 && < 0.10
    , enumerator >= 0.4 && < 0.5

  exposed-modules:
    Blaze.ByteString.Builder.Enumerator